2006-09-30  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/session.py:
	* src/legacy/glue.py:
	Added handling of presence probes.

2006-09-17  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/main.py:
	* src/contact.py:
	* src/config.py:
	* config_example.xml:
	Disabled pubsub/pep stuff since it's no longer valid/useful.

	* src/web/handler.py:
	* src/web/xmppcred.py:
	* src/adhoc.py:
	* src/avatar.py:
	* src/contact.py:
	* src/disco.py:
	* src/iq.py:
	* src/jabw.py:
	* src/pubsub.py:
	* src/register.py:
	* src/sasl.py:
	* src/session.py:
	* src/utils.py:
	* src/xmlconfig.py:
	* src/main.py:
	* src/xdb/legacyaimtransport.py:
	* src/xdb/legacyjittransport.py:
	* src/xdb/xmlfiles.py:
	* src/services/VersionTeller.py:
	* src/services/VCardFactory.py:
	* src/services/Statistics.py:
	* src/services/SearchFactory.py:
	* src/services/RosterRetrieval.py:
	* src/services/LastActivity.py:
	* src/services/IqAvatarFactory.py:
	* src/services/GatewayTranslator.py:
	* src/services/EntityTime.py:
	* src/services/ConnectUsers.py:
	* src/legacy/glue.py:
	* src/legacy/buddies.py:
	* src/legacy/services/ConfirmAccount.py:
	* src/legacy/services/EmailLookup.py:
	* tools/migrate.py:
	Updated to use twistwrap instead of tlib.

	* src/tlib/jabber:
	* src/tlib/domish.py:
	* src/tlib/xmlstream.py:
	* src/tlib/twistwrap.py:
	Removed due to lack of need anymore.

	* src/main.py:
	Updated to match PyMSNt's handling of reactors.

	* src/main.py:
	Added note about debug log.

	* src/services/VCardFactory.py:
	Fixed wrong number of args passed bug.

2006-09-11  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/jabw.py:
	Adjusted sendRosterImport to match JEP-0172 more accurately.
	Thanks to guest from blathersource for submitting patch.

	* src/sasl.py:
	* config_example.xml:
	Added quick note about lack of functionality with > Twisted 2.2.0.

	* src/tlib/twisted-1.3.0:
	Removed what has been reconsidered to be a bad idea.

	* src: